Created a GemPatternGenerator that generates a list of number corresponding to random gem colours. Updated the LevelFactory to load in a list of these random patterns, and a random one is picked when creating the GameLevel.